Fixed Topnav colour and alignment

--- a/src/main/resources/css/common.css
+++ b/src/main/resources/css/common.css
@@ -53,15 +53,17 @@ img.left-image {
 /* The sidebar menu.
 CSS Layout from W3Schools: https://www.w3schools.com/howto/howto_css_fixed_sidebar.asp*/
 .sidenav {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
+  height: 90%; /* Full-height: remove this if you want "auto" height */
   width: 160px; /* Set the width of the sidebar */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
-  background-color: #111; /* Black */
+  background-color: #333; /* Topnav colour */
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 20px;
+  margin: 10px;
+  margin-top: 18px;
 }
 
 /* The navigation menu links */
